<resources>
    <string name="app_name">AInfo</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nav_home">Home</string>
    <string name="nav_battery">Battery</string>
    <string name="nav_gps">GPS</string>
    <string name="nav_system">System</string>
    <string name="nav_network">Network</string>
    <string name="bat_stat">Battery Status</string>
    <string name="home_msg">Welcome to AINFO</string>
    <string name="home_msg2">See other tab for A Info about your phone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
