<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_battery"
        android:icon="@drawable/ic_battery_charging_full"
        android:title="@string/nav_battery" />
    <item
        android:id="@+id/nav_system"
        android:icon="@drawable/ic_settings_system_daydream"
        android:title="@string/nav_system" />
    <item
        android:id="@+id/nav_network"
        android:icon="@drawable/ic_signal_cellular_alt"
        android:title="@string/nav_network" />
    <item
        android:id="@+id/nav_gps"
        android:icon="@drawable/ic_gps_fixed"
        android:title="@string/nav_gps" />
</menu>